--- a/siteone_ready/c2.html
+++ b/siteone_ready/c2.html
@@ -35,7 +35,7 @@
     <h3 class="page_name txt">Шиндяпкин Илья</h3>
     <h4 class="txt"><a href="https://vk.com/ishindyapkin" target="_blank" rel="noopener">Вконтакте</a></h4>
     <h4 class="txt">Личная почта:</h4><br>
-    <h3 class="txt">Наш личный халявщик:</h3><br>
+    <h3 class="txt">Наш лучший работник:</h3><br>
     <h3 class="page_name txt">Васильченко Максим</h3>
     <h4 class="txt"><a href="https://vk.com/foychik" target="_blank" rel="noopener">Вконтакте</a></h4>
     <h4 class="txt">Личная почта:</h4><br>
